--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: main
       Como agradecimiento por tu interés, quiero regalarte una historia exclusiva ambientada en la era de hielo y con los primeros pobladores de este pedacito de tierra. Llena el formulario y disfrutá.
     </p>
 
-<form action="https://formsubmit.io/send/tuemail@ejemplo.com" method="POST" class="row justify-content-center">
+<form action="https://formsubmit.io/send/yo@adrianroblesfuentes.com" method="POST" class="row justify-content-center">
   <input type="hidden" name="_redirect" value="{{ site.baseurl }}/gracias.html">
   <input type="text" name="_formsubmit_id" style="display:none">
   
