--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,7 +12,7 @@ comments: false
     <p class="mb-4">Estoy disponible para charlar sobre libros, historia o cualquier proyecto cultural. ¡Conversemos!</p>
 
     <!-- Contact Form -->
-    <form action="https://formsubmit.io/send/tuemail@ejemplo.com" method="POST">
+    <form action="https://formsubmit.io/send/yo@adrianroblesfuentes.com" method="POST">
       <input type="hidden" name="_redirect" value="{{ site.baseurl }}/gracias.html">
       <input type="text" name="_formsubmit_id" style="display:none">
     
