--- a/index.html
+++ b/index.html
@@ -34,17 +34,16 @@ layout: main
       Como agradecimiento por tu interés, quiero regalarte una historia exclusiva ambientada en la era de hielo y con los primeros pobladores de este pedacito de tierra. Llena el formulario y disfrutá.
     </p>
 
-<form action="https://formsubmit.io/send/yo@adrianroblesfuentes.com" method="POST" class="row justify-content-center">
-  <input type="hidden" name="_redirect" value="{{ site.baseurl }}/gracias.html">
-  <input type="text" name="_formsubmit_id" style="display:none">
-  
-  <div class="col-md-6">
-    <div class="mb-3">
-      <input type="email" name="email" class="form-control" placeholder="Tu correo electrónico" required>
-    </div>
-    <div class="mb-3">
-      <input type="text" name="name" class="form-control" placeholder="Tu nombre (opcional)">
-    </div>
-    <button type="submit" class="btn btn-primary"><span>Recibir historia</span></button>
-  </div>
-</form>
+    <form action="https://formspree.io/f/mblokoke" method="POST" class="row justify-content-center">
+      <input type="hidden" name="_redirect" value="{{ site.baseurl }}/gracias.html">
+    
+      <div class="col-md-6">
+        <div class="mb-3">
+          <input type="email" name="email" class="form-control" placeholder="Tu correo electrónico" required>
+        </div>
+        <div class="mb-3">
+          <input type="text" name="name" class="form-control" placeholder="Tu nombre (opcional)">
+        </div>
+        <button type="submit" class="btn btn-primary"><span>Recibir historia</span></button>
+      </div>
+    </form>
