Updating css and content

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: main
     <h2 class="mb-3">Tu primera historia gratis</h2>
     <p class="lead mb-4" style="max-width: 700px; margin: 0 auto;">
       Como agradecimiento por tu interés, quiero regalarte una historia exclusiva ambientada en la era de hielo y con
-      los primeros pobladores de este pedacito de tierra. Llena el formulario y disfrutá.
+      los primeros pobladores de este pedacito de tierra.
     </p>
 
     <div class="bg-light p-4 rounded shadow-sm mx-auto" style="max-width: 600px;">
