--- a/pages/blog.html
+++ b/pages/blog.html
@@ -6,9 +6,10 @@ permalink: /blog/
 
 <!-- Blog Section Intro -->
 <section class="container text-center my-5">
-  <h1>Historias y Crónicas</h1>
-  <p class="lead">Explora relatos inspirados en la historia de Costa Rica, desde la época precolombina hasta la
-    actualidad.</p>
+  <h1>Entre Palabras y Mundos</h1>
+  <p class="lead">Un espacio donde comparto mi experiencia como autor: técnicas de escritura, exploraciones históricas,
+    creación de mundos y lenguas, y todo lo que alimenta la imaginación narrativa. Bienvenid@ a mi bitácora creativa.
+  </p>
 </section>
 
 <!-- Blog Posts List -->
