--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -8,30 +8,28 @@ layout: main
 <!-- Author Section -->
 <div class="container my-5">
     <div class="row justify-content-center">
-        <div class="col-md-10">
+        <div class="col-md-10 author-bio">
             <h1 class="text-center">Yo, Adrián</h1>
-            <h2 class="h5 text-muted text-center mb-4">Cada historia que escribo nace de una pregunta: ¿quiénes fuimos
-                antes de que nos contaran quiénes somos?</h2>
+
             <div class="text-center">
                 <img src="{{ site.baseurl }}/assets/images/adrian.jpg" alt="Adrián Robles"
                     class="img-fluid rounded-circle shadow mb-4" style="max-width: 250px;">
             </div>
-            <p>Soy un autor costarricense de ficción histórica. Mi obra nace del rigor investigativo y una profunda
-                curiosidad por el pasado. Me apasionan las crónicas y relatos antiguos, y combino fuentes primarias,
-                arqueológicas y antropológicas para construir historias que, aunque ficticias, están sólidamente
-                ancladas en hechos reales.</p>
-            <p>Mi estilo narrativo —vivido y poético— busca invitar al lector a redescubrir la historia desde
-                perspectivas olvidadas, especialmente la de los pueblos originarios. A través de mis cuentos y novelas,
-                quiero despertar la curiosidad histórica, fortalecer nuestra identidad cultural y dar voz a quienes han
-                sido silenciados por la narrativa oficial.</p>
-            <p>Creo firmemente en la justicia histórica, en la verdad como eje de la ficción y en la imaginación como
-                puente entre el pasado y el presente.</p>
+
+            <h2 class="h5 text-muted text-center mb-4">Me mueven las historias que revelan lo que fuimos y lo que
+                podríamos ser. Entre la historia y la fantasía, busco construir puentes entre tiempos y posibilidades.
+            </h2>
+
+            <p>Soy Adrián Robles Fuentes, autor costarricense. Escribo historias que cruzan los siglos y las
+                dimensiones. Algunas nacen del estudio de fuentes históricas; otras de la intuición, el símbolo
+                o la imaginación.</p>
+
+            <p>Me apasiona explorar los silencios del pasado, las voces que quedaron fuera de la historia oficial y los
+                mundos alternativos donde lo posible se reescribe. Mi narrativa combina lo vivido con lo fantástico, lo
+                investigado con lo soñado.</p>
+
+            <p>A través de mis libros —históricos o fantásticos— invito al lector a repensar la memoria, la identidad y
+                lo que significa ser humano.</p>
         </div>
     </div>
 </div>
-
-
-
-
-
-
